--- a/index.html
+++ b/index.html
@@ -144,62 +144,6 @@
     </header>
 
     <main class="grid" id="offers">
-      <!-- (Tutti i tuoi 8 pacchetti rimangono invariati — copia qui la sezione dei <article> esattamente come la tua versione attuale) -->
-    </main>
-
-    <div class="contact-row">
-      <a class="contact-link" href="tel:+390666190850">📞 06 6619 0850</a>
-      <a class="contact-link" href="mailto:info@santaluciamaccarese.it">✉️ info@santaluciamaccarese.it</a>
-      <a class="contact-link" href="https://www.santaluciamaccarese.it" target="_blank" rel="noopener">🌐 Visita il sito</a>
-    </div>
-
-    <footer>
-      <div>© Santa Lucia Maccarese — Via della Luna, Fregene (RM)</div>
-    </footer>
-  </div>
-
-  <!-- Modal -->
-  <div id="modal" class="modal" onclick="if(event.target===this) closeModal()">
-    <div class="modal-card" role="dialog" aria-modal="true" aria-labelledby="modal-title">
-      <button class="modal-close" onclick="closeModal()" aria-label="Chiudi">×</button>
-      <div id="modal-body"></div>
-    </div>
-  </div>
-
-  <script>
-    const DETAILS = {
-      lastminute:{title:'Last Minute — Sconto 5%',text:'<p>Valida per soggiorni prenotati entro 72 ore dal check-in. Sconto 5% sulla tariffa non rimborsabile. Tutte le camere incluse.</p>'},
-      '2notti':{title:'Offerta 2/3 Notti',text:'<p>Valida per soggiorni di 2 o 3 notti. Sconto 5% sulla tariffa non rimborsabile per prenotazioni dirette.</p>'},
-      spa_dayuse:{title:'SPA in camera — Day Use',text:'<p>Check-in dalle 12:00; check-out entro le 21:00. Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora. Solo Suite Sole.</p>'},
-      pranzo_spa:{title:'Pranzo & SPA — Day Use',text:'<p>Check-in dalle 12:00; check-out entro le 21:00. Accesso SPA per 1 ora + pranzo alla carta 2 portate. Solo Suite Sole. Non disponibile venerdì e sabato.</p>'},
-      fuga_romantica:{title:'Fuga Romantica',text:'<p>Check-in dalle 14:30; postazioni bordo piscina; cena degustazione "Orto e Territorio" 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
-      fuga_braciere:{title:'Fuga Romantica — Cena al Braciere',text:'<p>Check-in dalle 14:30; cena intima al braciere con menu degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
-      fuga_benessere:{title:'Fuga Benessere & Relax',text:'<p>Check-in dalle 14:30; accesso Garden SPA per 1 ora; cena degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
-      relax_weekend:{title:'Relax Weekend — 26 ore',text:'<p>Check-in sabato dalle 14:30; cena degustazione 5 portate; accesso SPA; colazione; check-out domenica ore 16:00.</p>'}
-    };
-
-    function openModal(key){
-      const data = DETAILS[key];
-      if(!data) return;
-      const body=document.getElementById('modal-body');
-      body.innerHTML='<h4 id="modal-title">'+data.title+'</h4>'+data.text+
-        '<div style="margin-top:12px;text-align:right"><button class="btn btn-primary" style="padding:8px 12px;border-radius:8px" onclick="closeModal()">Chiudi</button></div>';
-      document.getElementById('modal').classList.add('show');
-    }
-    function closeModal(){
-      document.getElementById('modal').classList.remove('show');
-      document.getElementById('modal-body').innerHTML='';
-    }
-  </script>
-</body>
-</html>
-<!doctype html>
-<html lang="it">
-
-<body>
-  <div class="wrap">
-    <main class="grid" id="offers">
-
       <!-- 1 Last Minute -->
       <article class="card">
         <img class="media" src="img/lastminute.jpg" alt="Last Minute Santa Lucia">
@@ -319,10 +263,9 @@
           </div>
         </div>
       </article>
-
     </main>
 
-    <div class="contact-row" style="margin-top:22px;justify-content:center">
+    <div class="contact-row">
       <a class="contact-link" href="tel:+390666190850">📞 06 6619 0850</a>
       <a class="contact-link" href="mailto:info@santaluciamaccarese.it">✉️ info@santaluciamaccarese.it</a>
       <a class="contact-link" href="https://www.santaluciamaccarese.it" target="_blank" rel="noopener">🌐 Visita il sito</a>
@@ -333,65 +276,37 @@
     </footer>
   </div>
 
-  <!-- Modali (tutte e 8) -->
+  <!-- Modali -->
   <div id="modal" class="modal" onclick="if(event.target===this) closeModal()">
     <div class="modal-card" role="dialog" aria-modal="true" aria-labelledby="modal-title">
       <button class="modal-close" onclick="closeModal()" aria-label="Chiudi">×</button>
-      <div id="modal-body">
-        <!-- contenuto inserito dinamicamente -->
-      </div>
+      <div id="modal-body"></div>
     </div>
   </div>
 
   <script>
-    // dati modali: titolo + descrizione dettagliata (usa i testi del cliente)
     const DETAILS = {
-      lastminute: {
-        title: 'Last Minute — Sconto 5%',
-        text: '<p>Valida per soggiorni prenotati entro 72 ore dal check-in. Sconto 5% sulla tariffa non rimborsabile. Tutte le camere incluse.</p>'
-      },
-      '2notti': {
-        title: 'Offerta 2/3 Notti',
-        text: '<p>Valida per soggiorni di 2 o 3 notti. Sconto 5% sulla tariffa non rimborsabile per prenotazioni dirette.</p>'
-      },
-      spa_dayuse: {
-        title: 'SPA in camera — Day Use',
-        text: '<p>Check-in dalle 12:00; check-out entro le 21:00. Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora. Solo Suite Sole.</p>'
-      },
-      pranzo_spa: {
-        title: 'Pranzo & SPA — Day Use',
-        text: '<p>Check-in dalle 12:00; check-out entro le 21:00. Accesso SPA per 1 ora + pranzo alla carta 2 portate. Solo Suite Sole. Non disponibile venerdì e sabato.</p>'
-      },
-      fuga_romantica: {
-        title: 'Fuga Romantica',
-        text: '<p>Check-in dalle 14:30; postazioni bordo piscina; cena degustazione "Orto e Territorio" 5 portate; colazione dolce o salata servita al tavolo; check-out ore 11:00.</p>'
-      },
-      fuga_braciere: {
-        title: 'Fuga Romantica — Cena al Braciere',
-        text: '<p>Check-in dalle 14:30; cena intima al braciere con menu degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'
-      },
-      fuga_benessere: {
-        title: 'Fuga Benessere & Relax',
-        text: '<p>Check-in dalle 14:30; accesso Garden SPA per 1 ora; cena degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'
-      },
-      relax_weekend: {
-        title: 'Relax Weekend — 26 ore',
-        text: '<p>Check-in sabato dalle 14:30; cena degustazione 5 portate; accesso SPA; colazione; check-out domenica ore 16:00.</p>'
-      }
+      lastminute:{title:'Last Minute — Sconto 5%',text:'<p>Valida per soggiorni prenotati entro 72 ore dal check-in. Sconto 5% sulla tariffa non rimborsabile. Tutte le camere incluse.</p>'},
+      '2notti':{title:'Offerta 2/3 Notti',text:'<p>Valida per soggiorni di 2 o 3 notti. Sconto 5% sulla tariffa non rimborsabile per prenotazioni dirette.</p>'},
+      spa_dayuse:{title:'SPA in camera — Day Use',text:'<p>Check-in dalle 12:00; check-out entro le 21:00. Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora. Solo Suite Sole.</p>'},
+      pranzo_spa:{title:'Pranzo & SPA — Day Use',text:'<p>Check-in dalle 12:00; check-out entro le 21:00. Accesso SPA per 1 ora + pranzo alla carta 2 portate. Solo Suite Sole. Non disponibile venerdì e sabato.</p>'},
+      fuga_romantica:{title:'Fuga Romantica',text:'<p>Check-in dalle 14:30; postazioni bordo piscina; cena degustazione "Orto e Territorio" 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
+      fuga_braciere:{title:'Fuga Romantica — Cena al Braciere',text:'<p>Check-in dalle 14:30; cena intima al braciere con menu degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
+      fuga_benessere:{title:'Fuga Benessere & Relax',text:'<p>Check-in dalle 14:30; accesso Garden SPA per 1 ora; cena degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
+      relax_weekend:{title:'Relax Weekend — 26 ore',text:'<p>Check-in sabato dalle 14:30; cena degustazione 5 portate; accesso SPA; colazione; check-out domenica ore 16:00.</p>'}
     };
 
     function openModal(key){
       const data = DETAILS[key];
       if(!data) return;
-      const body = document.getElementById('modal-body');
-      body.innerHTML = '<h4 id=\"modal-title\">' + data.title + '</h4>' + data.text + '<div style=\"margin-top:12px;text-align:right\"><button class=\"btn btn-primary\" style=\"padding:8px 12px;border-radius:8px\" onclick=\"closeModal()\">Chiudi</button></div>';
+      const body=document.getElementById('modal-body');
+      body.innerHTML='<h4 id="modal-title">'+data.title+'</h4>'+data.text+
+        '<div style="margin-top:12px;text-align:right"><button class="btn btn-primary" style="padding:8px 12px;border-radius:8px" onclick="closeModal()">Chiudi</button></div>';
       document.getElementById('modal').classList.add('show');
-      // accessibility focus
-      body.querySelector('button')?.focus();
     }
     function closeModal(){
       document.getElementById('modal').classList.remove('show');
-      document.getElementById('modal-body').innerHTML = '';
+      document.getElementById('modal-body').innerHTML='';
     }
   </script>
 </body>
