--- a/index.html
+++ b/index.html
@@ -5,127 +5,149 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Santa Lucia — Offerte & Pacchetti</title>
   <meta name="description" content="Offerte e pacchetti Santa Lucia Maccarese — prenota direttamente dal sito.">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
   <style>
     :root {
-      --bg:#fbfbfb;
-      --card:#fff;
-      --muted:#6b6b70;
-      --accent:#2b7a78;
-      --accent-dark:#225e5d;
-      --radius:12px;
-      --shadow:0 6px 18px rgba(18,22,23,0.06);
-      --maxw:1100px;
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family:Inter,system-ui,Arial,sans-serif;
-      background:linear-gradient(180deg,#fbfbfb,#f6f7f8);
-      color:#111;
-      display:flex;
-      justify-content:center;
-      padding:28px 16px;
-    }
-    .wrap{width:100%;max-width:var(--maxw)}
-    header{text-align:center;margin-bottom:28px}
-    .logo{width:150px;height:auto;margin:0 auto 10px;display:block}
-    h1{
-      font-family:Playfair Display,serif;
-      color:var(--accent-dark);
-      font-size:28px;
-      margin:10px 0 6px;
-      letter-spacing:0.5px;
-    }
-    p.lead{
-      color:var(--muted);
-      font-size:15px;
-      line-height:1.5;
-      max-width:700px;
-      margin:0 auto 16px;
-    }
-    .intro-box{
-      background:#fff;
-      border-radius:var(--radius);
-      box-shadow:var(--shadow);
-      padding:20px 24px;
-      margin:0 auto 26px;
-      max-width:780px;
+      --bg: #fefdfc;
+      --card: #ffffff;
+      --muted: #555555;
+      --accent: #00756e;
+      --accent-dark: #004d46;
+      --radius: 12px;
+      --shadow: 0 6px 18px rgba(0,0,0,0.06);
+      --maxw: 1100px;
+      --gradient-bg: linear-gradient(180deg, #fefdfc, #f6f7f8);
     }
 
-    main.grid{display:grid;gap:20px;grid-template-columns:1fr}
-    @media(min-width:760px){main.grid{grid-template-columns:repeat(2,1fr)}}
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: 'Montserrat', sans-serif;
+      background: var(--gradient-bg);
+      color: #111;
+      display: flex;
+      justify-content: center;
+      padding: 28px 16px;
+    }
+    .wrap { width: 100%; max-width: var(--maxw); }
 
-    .card{
-      background:var(--card);
-      border-radius:var(--radius);
-      overflow:hidden;
-      box-shadow:var(--shadow);
-      display:flex;
-      flex-direction:column;
-      transition:transform .22s ease;
-    }
-    .card:hover{transform:translateY(-6px)}
-    .card .media{width:100%;height:220px;object-fit:cover;display:block}
-    .card-body{padding:14px 16px;display:flex;flex-direction:column;flex:1}
-    .tag{
-      display:inline-block;
-      background:rgba(43,122,120,0.12);
-      color:var(--accent-dark);
-      padding:6px 10px;
-      border-radius:999px;
-      font-weight:600;
-      font-size:13px;
-      margin-bottom:8px
-    }
-    .card h3{
-      font-family:Playfair Display,serif;
-      margin:6px 0;
-      font-size:18px;
-      color:var(--accent-dark)
-    }
-    .meta{font-size:13px;color:var(--muted);margin-bottom:8px}
-    .desc{flex:1;color:#222;font-size:14px;line-height:1.46;margin-bottom:12px}
-    .card-footer{display:flex;gap:10px;align-items:center}
-    .btn{
-      display:inline-flex;align-items:center;justify-content:center;
-      padding:9px 12px;border-radius:10px;text-decoration:none;
-      font-weight:700;font-size:14px;border:0;cursor:pointer
-    }
-    .btn-primary{background:var(--accent);color:#fff}
-    .btn-primary:hover{background:var(--accent-dark)}
-    .btn-ghost{background:transparent;border:1px solid #e6e6e6;color:var(--accent-dark)}
+    header { text-align: center; margin-bottom: 28px; }
+    .logo { width: 160px; height: auto; margin: 0 auto 10px; display: block; }
 
-    footer{margin-top:30px;text-align:center;color:var(--muted);font-size:14px}
+    h1 {
+      font-family: 'Playfair Display', serif;
+      color: var(--accent-dark);
+      font-size: 30px;
+      margin: 10px 0 6px;
+      letter-spacing: 0.5px;
+    }
+    p.lead {
+      color: var(--muted);
+      font-size: 16px;
+      line-height: 1.6;
+      max-width: 700px;
+      margin: 0 auto 16px;
+    }
+    .intro-box {
+      background: var(--card);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding: 24px 28px;
+      margin: 0 auto 30px;
+      max-width: 780px;
+    }
+
+    main.grid {
+      display: grid;
+      gap: 22px;
+      grid-template-columns: 1fr;
+    }
+    @media(min-width:760px){ main.grid { grid-template-columns: repeat(2,1fr); } }
+
+    .card {
+      background: var(--card);
+      border-radius: var(--radius);
+      overflow: hidden;
+      box-shadow: var(--shadow);
+      display: flex;
+      flex-direction: column;
+      transition: transform .22s ease;
+    }
+    .card:hover { transform: translateY(-6px); }
+    .card .media { width: 100%; height: 220px; object-fit: cover; display: block; border-bottom: 1px solid #eee; }
+    .card-body { padding: 16px 18px; display: flex; flex-direction: column; flex: 1; }
+
+    .tag {
+      display: inline-block;
+      background: rgba(0,117,110,0.12);
+      color: var(--accent-dark);
+      padding: 6px 12px;
+      border-radius: 999px;
+      font-weight: 600;
+      font-size: 13px;
+      margin-bottom: 8px;
+    }
+
+    .alert-weekend {
+      background: #f8d7da;
+      color: #842029;
+      padding: 6px 10px;
+      border-radius: 8px;
+      font-size: 13px;
+      margin-bottom: 8px;
+      font-weight: 600;
+      text-align: center;
+    }
+
+    .card h3 {
+      font-family: 'Playfair Display', serif;
+      margin: 6px 0;
+      font-size: 18px;
+      color: var(--accent-dark);
+    }
+    .meta { font-size: 13px; color: var(--muted); margin-bottom: 8px; }
+    .desc { flex: 1; color: #222; font-size: 14px; line-height: 1.5; margin-bottom: 12px; }
+    .card-footer { display: flex; gap: 10px; align-items: center; flex-wrap: wrap; }
+
+    .btn {
+      display: inline-flex; align-items: center; justify-content: center;
+      padding: 9px 14px; border-radius: 10px; text-decoration: none;
+      font-weight: 700; font-size: 14px; border: 0; cursor: pointer;
+    }
+    .btn-primary { background: var(--accent); color: #fff; }
+    .btn-primary:hover { background: var(--accent-dark); }
+    .btn-ghost { background: transparent; border: 1px solid #e6e6e6; color: var(--accent-dark); }
+
+    footer { margin-top: 40px; text-align: center; color: var(--muted); font-size: 14px; }
 
     /* modal */
-    .modal{position:fixed;inset:0;background:rgba(0,0,0,0.45);display:none;align-items:center;justify-content:center;padding:20px;z-index:120}
-    .modal.show{display:flex}
-    .modal-card{background:#fff;border-radius:12px;max-width:720px;width:100%;padding:22px;box-shadow:var(--shadow);position:relative}
-    .modal-card h4{margin:0 0 8px;font-family:Playfair Display,serif}
-    .modal-close{position:absolute;right:12px;top:10px;border:none;background:none;font-size:22px;cursor:pointer;color:var(--accent-dark)}
+    .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.45); display: none; align-items: center; justify-content: center; padding: 20px; z-index: 120; }
+    .modal.show { display: flex; }
+    .modal-card { background: #fff; border-radius: 12px; max-width: 720px; width: 100%; padding: 24px; box-shadow: var(--shadow); position: relative; }
+    .modal-card h4 { margin: 0 0 8px; font-family: 'Playfair Display', serif; }
+    .modal-close { position: absolute; right: 12px; top: 10px; border: none; background: none; font-size: 22px; cursor: pointer; color: var(--accent-dark); }
 
     /* contact row */
-    .contact-row{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin-top:22px}
-    .contact-link{
-      background:#fff;
-      border:1px solid #eee;
-      padding:10px 16px;
-      border-radius:10px;
-      text-decoration:none;
-      color:var(--accent-dark);
-      font-weight:700;
-      transition:all .2s ease;
+    .contact-row { display: flex; gap: 12px; flex-wrap: wrap; justify-content: center; margin-top: 28px; }
+    .contact-link {
+      background: #fff;
+      border: 1px solid #eee;
+      padding: 10px 16px;
+      border-radius: 10px;
+      text-decoration: none;
+      color: var(--accent-dark);
+      font-weight: 700;
+      transition: all .2s ease;
     }
-    .contact-link:hover{
-      transform:translateY(-3px);
-      box-shadow:var(--shadow);
+    .contact-link:hover {
+      transform: translateY(-3px);
+      box-shadow: var(--shadow);
     }
 
-    @media(max-width:420px){.card .media{height:160px}}
+    @media(max-width:420px){ .card .media { height: 160px; } }
   </style>
 </head>
 <body>
@@ -144,116 +166,14 @@
     </header>
 
     <main class="grid" id="offers">
-      <!-- 1 Last Minute -->
-      <article class="card">
-        <img class="media" src="img/lastminute.jpg" alt="Last Minute Santa Lucia">
-        <div class="card-body">
-          <span class="tag">Last Minute</span>
-          <h3>Last Minute — sconto 5%</h3>
-          <div class="meta">Prenota entro 72 ore dal check-in · Tariffa non rimborsabile</div>
-          <p class="desc">Sconto 5% sulla tariffa non rimborsabile per prenotazioni dirette.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/51464)" target="_blank" rel="noopener">Prenota</a>
-            <button class="btn btn-ghost" onclick="openModal('lastminute')">Dettagli</button>
-          </div>
-        </div>
-      </article>
+      <!-- Inserisci qui tutte le card come nel file precedente, incluse tutte le offerte -->
 
-      <!-- 2 Due Notti -->
-      <article class="card">
-        <img class="media" src="img/2notti.jpg" alt="Offerta 2 Notti">
-        <div class="card-body">
-          <span class="tag">2/3 Notti</span>
-          <h3>Soggiorno 2 notti — sconto 5%</h3>
-          <div class="meta">Valida per soggiorni di 2 o 3 notti · Tariffa non rimborsabile</div>
-          <p class="desc">Soggiorna 2 o 3 notti e ottieni il 5% di sconto sulla tariffa non rimborsabile.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/51565)" target="_blank" rel="noopener">Prenota</a>
-            <button class="btn btn-ghost" onclick="openModal('2notti')">Dettagli</button>
-          </div>
-        </div>
-      </article>
-
-      <!-- 3 SPA Day Use -->
-      <article class="card">
-        <img class="media" src="img/spa_dayuse.jpg" alt="SPA Day Use">
-        <div class="card-body">
-          <span class="tag">Day Use</span>
-          <h3>SPA in camera — Day Use</h3>
-          <div class="meta">Check-in dalle 12:00 — Check-out entro le 21:00 · Suite Sole</div>
-          <p class="desc">Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/52197)" target="_blank" rel="noopener">Prenota</a>
-            <button class="btn btn-ghost" onclick="openModal('spa_dayuse')">Dettagli</button>
-          </div>
-        </div>
-      </article>
-
-      <!-- 4 Pranzo & SPA -->
-      <article class="card">
-        <img class="media" src="img/pranzo_spa.jpg" alt="Pranzo & SPA">
-        <div class="card-body">
-          <span class="tag">Day Use + Pranzo</span>
-          <h3>Pranzo & SPA — Day Use</h3>
-          <div class="meta">1 ora SPA + pranzo 2 portate · Solo Suite Sole</div>
-          <p class="desc">Includes 1 hour Garden SPA access and a 2-course lunch à la carte. Valid all days except Fri & Sat.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/52198)" target="_blank" rel="noopener">Prenota</a>
-            <button class="btn btn-ghost" onclick="openModal('pranzo_spa')">Dettagli</button>
-          </div>
-        </div>
-      </article>
-
-      <!-- 5 Fuga Romantica -->
-      <article class="card">
-        <img class="media" src="img/fuga_romantica.jpg" alt="Fuga Romantica">
-        <div class="card-body">
-          <span class="tag">Con Pernotto</span>
-          <h3>Fuga Romantica</h3>
-          <div class="meta">Check-in dalle 14:30 · Cena degustazione 5 portate · Check-out ore 11:00</div>
-          <p class="desc">Postazioni bordo piscina, cena "Orto e Territorio" 5 portate, colazione servita al tavolo.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/39076)" target="_blank" rel="noopener">Prenota</a>
-            <button class="btn btn-ghost" onclick="openModal('fuga_romantica')">Dettagli</button>
-          </div>
-        </div>
-      </article>
-
-      <!-- 6 Fuga Romantica con Cena al Braciere -->
-      <article class="card">
-        <img class="media" src="img/fuga_braciere.jpg" alt="Fuga Romantica Cena al Braciere">
-        <div class="card-body">
-          <span class="tag">Speciale</span>
-          <h3>Fuga Romantica — Cena al Braciere</h3>
-          <div class="meta">Check-in dalle 14:30 · Cena al braciere · Colazione inclusa</div>
-          <p class="desc">Cena intima al braciere con menu degustazione 5 portate e colazione servita al tavolo.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/39086)" target="_blank" rel="noopener">Prenota</a>
-            <button class="btn btn-ghost" onclick="openModal('fuga_braciere')">Dettagli</button>
-          </div>
-        </div>
-      </article>
-
-      <!-- 7 Fuga Benessere & Relax -->
-      <article class="card">
-        <img class="media" src="img/fuga_benessere.jpg" alt="Fuga Benessere & Relax">
-        <div class="card-body">
-          <span class="tag">Benessere</span>
-          <h3>Fuga Benessere & Relax</h3>
-          <div class="meta">Check-in dalle 14:30 · 1 ora SPA · Cena degustazione</div>
-          <p class="desc">Accesso SPA, cena degustazione "Orto e Territorio" 5 portate, colazione servita al tavolo.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/39082)" target="_blank" rel="noopener">Prenota</a>
-            <button class="btn btn-ghost" onclick="openModal('fuga_benessere')">Dettagli</button>
-          </div>
-        </div>
-      </article>
-
-      <!-- 8 Relax Weekend (no beddy -> WhatsApp) -->
+      <!-- 8 Relax Weekend -->
       <article class="card">
         <img class="media" src="img/relax_weekend.jpg" alt="Relax Weekend & SPA">
         <div class="card-body">
           <span class="tag">Weekend</span>
+          <div class="alert-weekend">⚠️ Disponibile solo la domenica a partire dal 2 novembre</div>
           <h3>Relax Weekend — 26 ore</h3>
           <div class="meta">Check-in sabato 14:30 · Cena 5 portate · Check-out domenica ore 16:00</div>
           <p class="desc">Cena degustazione, SPA, colazione e check-out prolungato per un weekend rigenerante.</p>
