--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <h1>Offerte & Pacchetti</h1>
         <p class="lead">
           Scopri le promozioni e i pacchetti esclusivi del <strong>Santa Lucia Maccarese</strong>.<br>
-          Prenota direttamente per ottenere le migliori condizioni e vivere un’esperienza di charme a due passi dal mare.
+          Prenota direttamente per ottenere le migliori condizioni e vivere un’esperienza di charme, fuori dal mondo a due passi dal mare.
         </p>
       </div>
     </header>
@@ -202,9 +202,9 @@
         <img class="media" src="img/spa_dayuse.jpg" alt="SPA Day Use">
         <div class="card-body">
           <span class="tag">Day Use</span>
-          <h3>SPA in camera — Day Use</h3>
-          <div class="meta">Check-in dalle 12:00 — Check-out entro le 21:00 · Suite Sole</div>
-          <p class="desc">Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora.</p>
+          <h3>Garden SPA  e Camera Day Use</h3>
+          <div class="meta">Check-in dalle 12:00 — Check-out entro le 21:00</div>
+          <p class="desc">Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora e utilizzo della camera.</p>
           <div class="card-footer">
             <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/52197)" target="_blank" rel="noopener">Prenota</a>
             <button class="btn btn-ghost" onclick="openModal('spa_dayuse')">Dettagli</button>
@@ -217,9 +217,9 @@
         <img class="media" src="img/pranzo_spa.jpg" alt="Pranzo & SPA">
         <div class="card-body">
           <span class="tag">Day Use + Pranzo</span>
-          <h3>Pranzo & SPA — Day Use</h3>
-          <div class="meta">1 ora SPA + pranzo 2 portate · Solo Suite Sole</div>
-          <p class="desc">Accesso SPA per 1 ora e pranzo alla carta 2 portate. Solo Suite Sole. Non disponibile ven & sab.</p>
+          <h3>Pranzo & Garden SPA con Camera in Day Use</h3>
+          <div class="meta">Check-in dalle 12.00 -- Check-out entro le 21.00</div>
+          <p class="desc">Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora e utilizzo della camera, pranzo alla carta 2 portate.</p>
           <div class="card-footer">
             <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/52198)" target="_blank" rel="noopener">Prenota</a>
             <button class="btn btn-ghost" onclick="openModal('pranzo_spa')">Dettagli</button>
@@ -311,10 +311,10 @@
 
   <script>
     const DETAILS = {
-      lastminute:{title:'Last Minute — Sconto 5%',text:'<p>Valida per soggiorni prenotati entro 72 ore dal check-in. Sconto 5% sulla tariffa non rimborsabile. Tutte le camere incluse.</p>'},
-      '2notti':{title:'Offerta 2/3 Notti',text:'<p>Valida per soggiorni di 2 o 3 notti. Sconto 5% sulla tariffa non rimborsabile per prenotazioni dirette.</p>'},
-      spa_dayuse:{title:'SPA in camera — Day Use',text:'<p>Check-in dalle 12:00; check-out entro le 21:00. Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora. Solo Suite Sole.</p>'},
-      pranzo_spa:{title:'Pranzo & SPA — Day Use',text:'<p>Check-in dalle 12:00; check-out entro le 21:00. Accesso SPA per 1 ora + pranzo alla carta 2 portate. Solo Suite Sole. Non disponibile venerdì e sabato.</p>'},
+      lastminute:{title:'Last Minute — Sconto 5%',text:'<p>Valida per soggiorni prenotati entro 72 ore dal check-in. Sconto 5% sulla tariffa non rimborsabile.</p>'},
+      '2notti':{title:'Offerta 2/3 Notti',text:'<p>Valida per soggiorni di 2 o 3 notti. Sconto 5% sulla tariffa non rimborsabile.</p>'},
+      spa_dayuse:{title:'Garden SPA e Camera Day Use',text:'<p>Utilizzo della camera dalle 12:00; check-out entro le 21:00. Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora. </p>'},
+      pranzo_spa:{title:'Pranzo & Garden SPA con Camera in Day Use',text:'<p>Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora e utilizzo della camera, pranzo alla carta 2 portate.</p>'},
       fuga_romantica:{title:'Fuga Romantica',text:'<p>Check-in dalle 14:30; postazioni bordo piscina; cena degustazione "Orto e Territorio" 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
       fuga_braciere:{title:'Fuga Romantica — Cena al Braciere',text:'<p>Check-in dalle 14:30; cena intima al braciere con menu degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
       fuga_benessere:{title:'Fuga Benessere & Relax',text:'<p>Check-in dalle 14:30; accesso Garden SPA per 1 ora; cena degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
