--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <img class="media" src="img/spa_dayuse.jpg" alt="SPA Day Use">
         <div class="card-body">
           <span class="tag">Day Use</span>
-          <h3>Garden SPA  e Camera Day Use</h3>
+          <h3>Garden SPA con Camera Day Use</h3>
           <div class="meta">Check-in dalle 12:00 — Check-out entro le 21:00</div>
           <p class="desc">Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora e utilizzo della camera.</p>
           <div class="card-footer">
@@ -233,8 +233,11 @@
         <div class="card-body">
           <span class="tag">Con Pernotto</span>
           <h3>Fuga Romantica</h3>
-          <div class="meta">Check-in dalle 14:30 · Cena degustazione 5 portate · Check-out ore 11:00</div>
-          <p class="desc">Postazioni bordo piscina, cena "Orto e Territorio" 5 portate, colazione servita al tavolo.</p>
+          <div class="meta">Una Notte con Cena Degustazione e Colazione</div>
+          <p class="desc">- check-in a partire dalle 14:30; 
+- cena degustazione 5 portate
+- colazione;
+- check-out entro le ore 11:00.</p>
           <div class="card-footer">
             <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/39076)" target="_blank" rel="noopener">Prenota</a>
             <button class="btn btn-ghost" onclick="openModal('fuga_romantica')">Dettagli</button>
@@ -313,9 +316,14 @@
     const DETAILS = {
       lastminute:{title:'Last Minute — Sconto 5%',text:'<p>Valida per soggiorni prenotati entro 72 ore dal check-in. Sconto 5% sulla tariffa non rimborsabile.</p>'},
       '2notti':{title:'Offerta 2/3 Notti',text:'<p>Valida per soggiorni di 2 o 3 notti. Sconto 5% sulla tariffa non rimborsabile.</p>'},
-      spa_dayuse:{title:'Garden SPA e Camera Day Use',text:'<p>Utilizzo della camera dalle 12:00; check-out entro le 21:00. Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora. </p>'},
+      spa_dayuse:{title:'Garden SPA con Camera Day Use',text:'<p>Utilizzo della camera dalle 12:00; check-out entro le 21:00. Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora. </p>'},
       pranzo_spa:{title:'Pranzo & Garden SPA con Camera in Day Use',text:'<p>Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora e utilizzo della camera, pranzo alla carta 2 portate.</p>'},
-      fuga_romantica:{title:'Fuga Romantica',text:'<p>Check-in dalle 14:30; postazioni bordo piscina; cena degustazione "Orto e Territorio" 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
+      fuga_romantica:{title:'Fuga Romantica',text:'<p>- check-in a partire dalle 14:30; 
+- postazioni bordo piscina con lettini, ombrellone e telo piscina a partire dalle ore 11:30 del giorno di arrivo;
+- cena degustazione Santa Lucia "Orto e Territorio" 5 portate, la cucina offrirà inoltre un piccolo entrèe di benvenuto e piccola 
+   pasticceria di fine pasto;
+- colazione dolce o salata servita al tavolo preparata dalla nostra cucina;
+- check-out entro le ore 11:00.</p>'},
       fuga_braciere:{title:'Fuga Romantica — Cena al Braciere',text:'<p>Check-in dalle 14:30; cena intima al braciere con menu degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
       fuga_benessere:{title:'Fuga Benessere & Relax',text:'<p>Check-in dalle 14:30; accesso Garden SPA per 1 ora; cena degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
       relax_weekend:{title:'Relax Weekend — 26 ore',text:'<p>Check-in sabato dalle 14:30; cena degustazione 5 portate; accesso SPA; colazione; check-out domenica ore 16:00.</p>'}
