--- a/index.html
+++ b/index.html
@@ -318,8 +318,7 @@
       '2notti':{title:'Offerta 2/3 Notti',text:'<p>Valida per soggiorni di 2 o 3 notti. Sconto 5% sulla tariffa non rimborsabile.</p>'},
       spa_dayuse:{title:'Garden SPA con Camera Day Use',text:'<p>Utilizzo della camera dalle 12:00; check-out entro le 21:00. Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora. </p>'},
       pranzo_spa:{title:'Pranzo & Garden SPA con Camera in Day Use',text:'<p>Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora e utilizzo della camera, pranzo alla carta 2 portate.</p>'},
-      fuga_romantica:{title:'Fuga Romantica',text:'<p>- check-in a partire dalle 14:30; cena degustazione Santa Lucia "Orto e Territorio" 5 portate, la cucina offrirà inoltre un piccolo entrèe di benvenuto e piccola pasticceria di fine pasto; colazione dolce o salata servita al tavolo preparata dalla nostra cucina;
-check-out entro le ore 11:00.</p>'},
+      fuga_romantica:{title:'Fuga Romantica',text:'<p>- check-in a partire dalle 14:30; cena degustazione Santa Lucia "Orto e Territorio" 5 portate, la cucina offrirà inoltre un piccolo entrèe di benvenuto e piccola pasticceria di fine pasto; colazione dolce o salata servita al tavolo preparata dalla nostra cucina; check-out entro le ore 11:00.</p>'},
       fuga_braciere:{title:'Fuga Romantica — Cena al Braciere',text:'<p>Check-in dalle 14:30; cena intima al braciere con menu degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
       fuga_benessere:{title:'Fuga Benessere & Relax',text:'<p>Check-in dalle 14:30; accesso Garden SPA per 1 ora; cena degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
       relax_weekend:{title:'Relax Weekend — 26 ore',text:'<p>Check-in sabato dalle 14:30; cena degustazione 5 portate; accesso SPA; colazione; check-out domenica ore 16:00.</p>'}
