--- a/index.html
+++ b/index.html
@@ -136,9 +136,14 @@
     <img class="media" src="img/fuga_braciere.jpg" alt="Fuga Romantica Cena al Braciere">
     <div class="card-body">
       <span class="tag">Speciale</span>
-      <h3>Fuga Romantica — Cena al Braciere</h3>
-      <div class="meta">Check-in dalle 14:30 · Cena al braciere · Colazione inclusa</div>
-      <p class="desc">Cena intima al braciere con menu degustazione 5 portate e colazione servita al tavolo.</p>
+      <h3>Fuga Romantica con Cena al Braciere</h3>
+      <div class="meta">Una Notte con Cena Degustazione al Braciere e Colazione</div>
+      <ul>
+        <li>Check-in a partire dalle 14:30</li>
+        <li>Cena degustazione 5 portate</li>
+        <li>Colazione</li>
+        <li>Check-out entro le ore 11:00</li>
+      </ul>
       <div class="card-footer">
         <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/39086)" target="_blank" rel="noopener">Prenota</a>
         <button class="btn btn-ghost" onclick="openModal('fuga_braciere')">Dettagli</button>
