--- a/index.html
+++ b/index.html
@@ -250,9 +250,12 @@
         <img class="media" src="img/fuga_braciere.jpg" alt="Fuga Romantica Cena al Braciere">
         <div class="card-body">
           <span class="tag">Speciale</span>
-          <h3>Fuga Romantica — Cena al Braciere</h3>
-          <div class="meta">Check-in dalle 14:30 · Cena al braciere · Colazione inclusa</div>
-          <p class="desc">Cena intima al braciere con menu degustazione 5 portate e colazione servita al tavolo.</p>
+          <h3>Fuga Romantica con Cena al Braciere</h3>
+          <div class="meta">Una Notte con Cena Degustazione al Braciere e Colazione</div>
+          <p class="desc">- check-in a partire dalle 14:30; 
+- cena degustazione 5 portate
+- colazione;
+- check-out entro le ore 11:00.</p>
           <div class="card-footer">
             <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/39086)" target="_blank" rel="noopener">Prenota</a>
             <button class="btn btn-ghost" onclick="openModal('fuga_braciere')">Dettagli</button>
@@ -324,7 +327,13 @@
    pasticceria di fine pasto;
 - colazione dolce o salata servita al tavolo preparata dalla nostra cucina;
 - check-out entro le ore 11:00.</p>'},
-      fuga_braciere:{title:'Fuga Romantica con Cena al Braciere',text:'<p>Check-in dalle 14:30; cena intima al braciere con menu degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
+      fuga_braciere:{title:'Fuga Romantica con Cena al Braciere',text:'<p>l pacchetto “Fuga romantica con cena al braciere” vuole essere una parentesi di romantico relax, per rompere dalla routine frenetica. 
+Il pacchetto comprende: 
+- postazioni bordo piscina con lettini, ombrellone e telo piscina a partire dalle ore 11:30 del giorno di arrivo;
+- check-in della camera a partire dalle 14:30; 
+- cena intima e romantica al braciere con menù degustazione Santa Lucia "Orto e Territorio" 5 portate, la cucina offrirà inoltre un piccolo entrèe di benvenuto e piccola pasticceria di fine pasto; 
+- colazione dolce o salata servita al tavolo preparata dalla nostra cucina; 
+- check-out entro le ore 11:00.</p>'},
       fuga_benessere:{title:'Fuga Benessere & Relax',text:'<p>Check-in dalle 14:30; accesso Garden SPA per 1 ora; cena degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
       relax_weekend:{title:'Relax Weekend — 26 ore',text:'<p>Check-in sabato dalle 14:30; cena degustazione 5 portate; accesso SPA; colazione; check-out domenica ore 16:00.</p>'}
     };
