--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <article class="card">  
         <img class="media" src="img/fuga_romantica.jpg" alt="Fuga Romantica">  
         <div class="card-body">  
-          <span class="tag">Con Pernotto</span>  
+          <span class="tag">Una Notte</span>  
           <h3>Fuga Romantica</h3>  
           <div class="meta">Una Notte con Cena Degustazione e Colazione</div>  
           <p class="desc">- check-in a partire dalle 14:30;   
@@ -249,7 +249,7 @@
       <article class="card">  
         <img class="media" src="img/fuga_braciere.jpg" alt="Fuga Romantica Cena al Braciere">  
         <div class="card-body">  
-          <span class="tag">Speciale</span>  
+          <span class="tag">Una Notte</span>  
           <h3>Fuga Romantica con Cena al Braciere</h3>  
           <div class="meta">Una Notte con Cena Degustazione al Braciere e Colazione</div>  
           <p class="desc">- check-in a partire dalle 14:30;   
@@ -267,10 +267,14 @@
       <article class="card">  
         <img class="media" src="img/fuga_benessere.jpg" alt="Fuga Benessere & Relax">  
         <div class="card-body">  
-          <span class="tag">Benessere</span>  
+          <span class="tag">Una Notte</span>  
           <h3>Fuga Benessere & Relax</h3>  
-          <div class="meta">Check-in dalle 14:30 · 1 ora SPA · Cena degustazione</div>  
-          <p class="desc">Accesso SPA, cena degustazione "Orto e Territorio" 5 portate, colazione servita al tavolo.</p>  
+          <div class="meta">Una Notte con Cena Degustazione, Colazione e Garden SPA.</div>  
+          <p class="desc">- check-in a partire dalle 14:30;
+            - Accesso Garden SPA
+- cena degustazione di 5 portate  
+- colazione;  
+- check-out entro le ore 11:00.</p>  
           <div class="card-footer">  
             <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/51498)" target="_blank" rel="noopener">Prenota</a>  
             <button class="btn btn-ghost" onclick="openModal('fuga_benessere')">Dettagli</button>  
@@ -282,11 +286,14 @@
       <article class="card">  
         <img class="media" src="img/relax_weekend.jpg" alt="Relax Weekend & SPA">  
         <div class="card-body">  
-          <span class="tag">Weekend</span>  
+          <span class="tag">Una Notte</span>  
           <div class="alert-weekend">⚠️ Disponibile solo la domenica a partire dal 2 novembre</div>  
-          <h3>Relax Weekend — 26 ore</h3>  
-          <div class="meta">Check-in sabato 14:30 · Cena 5 portate · Check-out domenica ore 16:00</div>  
-          <p class="desc">Cena degustazione, SPA, colazione e check-out prolungato per un weekend rigenerante.</p>  
+          <h3>Relax Weekend - 26 Ore Fuori dal Mondo a Due Passi dal Mare</h3>  
+          <div class="meta">Una Notte con Cena Degustazione, Colazione e Late Check-Out</div>  
+          <p class="desc">- check-in a partire dalle 14:30;   
+- cena degustazione 5 portate  
+- colazione;  
+- Late check-out entro le ore 16:00.</p>  
           <div class="card-footer">  
             <a class="btn btn-primary" href="https://wa.me/390666190850?text=Salve%20vorrei%20info%20sul%20pacchetto%20Relax%20Weekend" target="_blank" rel="noopener">Prenota WhatsApp</a>  
             <button class="btn btn-ghost" onclick="openModal('relax_weekend')">Dettagli</button>  
@@ -323,8 +330,8 @@
       pranzo_spa:{title:'Pranzo & Garden SPA con Camera in Day Use',text:'<p>Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora e utilizzo della camera, pranzo alla carta 2 portate.</p>'},  
       fuga_romantica:{title:'Fuga Romantica',text:'<p>- check-in a partire dalle 14:30; cena degustazione Santa Lucia "Orto e Territorio" 5 portate, la cucina offrirà inoltre un piccolo entrèe di benvenuto e piccola pasticceria di fine pasto; colazione dolce o salata servita al tavolo preparata dalla nostra cucina; check-out entro le ore 11:00.</p>'},  
       fuga_braciere:{title:'Fuga Romantica con Cena al Braciere',text:'<p>- check-in a partire dalle 14:30; cena degustazione Santa Lucia "Orto e Territorio" di 5 portate al Braciere, la cucina offrirà inoltre un piccolo entrèe di benvenuto e piccola pasticceria di fine pasto; colazione dolce o salata servita al tavolo preparata dalla nostra cucina; check-out entro le ore 11:00.</p>'},  
-      fuga_benessere:{title:'Fuga Benessere & Relax',text:'<p>Check-in dalle 14:30; accesso Garden SPA per 1 ora; cena degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},  
-      relax_weekend:{title:'Relax Weekend — 26 ore',text:'<p>Check-in sabato dalle 14:30; cena degustazione 5 portate; accesso SPA; colazione; check-out domenica ore 16:00.</p>'}  
+      fuga_benessere:{title:'Fuga Benessere & Relax',text:'<p>- check-in a partire dalle 14:30; Accesso alla Garden SPA; cena degustazione Santa Lucia "Orto e Territorio" di 5 portate al Braciere, la cucina offrirà inoltre un piccolo entrèe di benvenuto e piccola pasticceria di fine pasto; colazione dolce o salata servita al tavolo preparata dalla nostra cucina; check-out entro le ore 11:00.</p>'},  
+      relax_weekend:{title:'Relax Weekend — 26 ore',text:'<p>- check-in a partire dalle 14:30; cena degustazione Santa Lucia "Orto e Territorio" 5 portate, la cucina offrirà inoltre un piccolo entrèe di benvenuto e piccola pasticceria di fine pasto; colazione dolce o salata servita al tavolo preparata dalla nostra cucina; Late Check-out entro le ore 16:00.</p>'}  
     };  
   
     function openModal(key){  
